samples/_failures_safe/1761320980_d14c2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a280e1f.c: In function ‘main’:
./samples/SAFE/__tmp_8a280e1f.c:172:5: error: expected ‘{’ at end of input
  172 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_8a280e1f.c:172:5: error: expected declaration or statement at end of input
